lang/examples/bad/09-02-variable-lambda-scope.wdr
fun main(): Void {
  var c: () -> Void = lambda (): Void => {
    var a: String = "test";

    return;
  };

  printString(a);

  return;
}